started with ex03

--- a/assignment03/report/sections/ex02.tex
+++ b/assignment03/report/sections/ex02.tex
@@ -47,7 +47,7 @@ Therefore the residual becomes
 \end{equation}
 For the final step we want to make the residual orthogonal to the basis function. Hence for sine functions on the interval $[0,\pi]$ with weight function $w(x)=1$, we have:
 \begin{equation}
-	(\phi_n, \psi_m)_w = \int_0^{\pi} \sin(mx) \frac{\pi}{2}\sin(nx) dx = \delta_{mn}
+	(\phi_n, \psi_m)_w = \int_0^{\pi} \sin(mx) \frac{2}{\pi}\sin(nx) dx = \delta_{mn}
 	\label{eq:weight_f}
 \end{equation}
 Therefore, $\gamma_m = \frac{\pi}{2}$ and our test functions should be:
