--- a/assignment03/report/sections/ex03.tex
+++ b/assignment03/report/sections/ex03.tex
@@ -50,11 +50,93 @@ This gives us:
 	\left(R_N, \psi_m\right)_w  = \frac{2}{\pi} \int_0^{\pi} \left ( \sum_{n=0}^{N+2} \frac{d\hat{u}_n(t)}{dt} \cos(nx) - \sin(x)  \sum_{n=0}^{N+2} \hat{u}_n(t) n \sin(nx) \right) \cos(mx) dx = 0
 	\label{eq:res_der}
 \end{equation}
-Looking at each term individually we get using orthogonality
+Looking at each term individually
+\begin{itemize}
+	\item \textit{First term}:
+	      \begin{equation}
+		      \frac{2}{\pi}\sum_{n=0}^{N+2} \frac{d\hat{u}_n(t)}{dt} \int_0^\pi \cos(nx) \cos(mx) dx
+		      \label{eq:ft3}
+	      \end{equation}
+	      Using the orthogonally property of cosine functions
+	      \begin{equation}
+		      \int_0^{\pi} \cos(nx)\cos(mx)dx = \begin{cases}
+			      \frac{\pi}{2} & \text{if } n = m \neq 0 \\
+			      \pi           & \text{if } n = m = 0    \\
+			      0             & \text{if } n \neq m
+		      \end{cases}
+		      \label{eq:case}
+	      \end{equation}
+	      Resulting in
+	      \begin{equation}
+		      \frac{2}{\pi}\sum_{n=0}^{N+2} \frac{d\hat{u}_n(t)}{dt}\int_0^{\pi} \cos(nx)\cos(mx)dx = \begin{cases}
+			      \frac{d\hat{u}_m(t)}{dt}  & \text{if } m \neq 0 \\
+			      2\frac{d\hat{u}_0(t)}{dt} & \text{if } m = 0
+		      \end{cases}
+		      \label{eq:cases2}
+	      \end{equation}
+	\item \textit{Second Term}:
+	      \begin{equation}
+		      -\frac{2}{\pi}\sum_{n=0}^{N+2} \hat{u}_n(t) n \int_0^\pi \sin(x) \sin(nx) \cos(mx) dx
+		      \label{eq:sterm}
+	      \end{equation}
+	      We can rewrite the integral as follows:
+	      \begin{equation}
+		      \int_0^\pi \sin(x) \sin(nx) \cos(mx) dx = \frac{1}{2}\int_0^{\pi} \cos((n-1)x) - \cos((n+1)x) \cos(mx) dx
+		      \label{eq:oou}
+	      \end{equation}
+	      splitting up this integral leads to
+	      \begin{equation}
+		      \begin{aligned}
+			      \int_0^{\pi} \cos((n-1)x)\cos(mx)dx & = \frac{1}{2}\int_0^{\pi} [\cos((n-1+m)x) + \cos((n-1-m)x)]dx \\
+			      \int_0^{\pi} \cos((n+1)x)\cos(mx)dx & = \frac{1}{2}\int_0^{\pi} [\cos((n+1+m)x) + \cos((n+1-m)x)]dx
+		      \end{aligned}
+		      \label{eq:int}
+	      \end{equation}
+	      For a cosine integral:
+	      \begin{equation}
+		      \int_0^{\pi} \cos(kx)dx = \begin{cases}
+			      \pi                      & \text{if } k = 0    \\
+			      \frac{\sin(k\pi)}{k} = 0 & \text{if } k \neq 0
+		      \end{cases}
+		      \label{eq:cos}
+	      \end{equation}
+	      Therefore these integrals are non-zero only when:
+	      \begin{equation}
+		      \begin{aligned}
+			      (n - 1 + m) & = 0 \Rightarrow n = 1 - m                                        \\
+			      (n - 1 - m) & = 0 \Rightarrow n = m + 1                                        \\
+			      (n + 1 + m) & = 0 \Rightarrow n = - (m+1) \text{ (impossible for } n,m \geq 0) \\
+			      (n + 1 - m) & = 0 \Rightarrow n = m - 1                                        \\
+		      \end{aligned}
+		      \label{eq:caso}
+	      \end{equation}
+	      Therfore for $m \geq 1$ the only non-zero contributions come from
+	      \begin{itemize}
+		      \item $n=m+1$: $\frac{m+1}{2}\hat{u}_{m+1}$
+		      \item $n=m-1$: $\frac{m-1}{2}\hat{u}_{m-1}$
+	      \end{itemize}
+	      For $m=0$ the non-zero term is
+	      \begin{itemize}
+		      \item $n=1$: $-\frac{1}{2}\hat{u}_1$
+	      \end{itemize}
+\end{itemize}
+Combining both terms for $m \geq 1$ we end up with
 \begin{equation}
-	\frac{2}{\pi}\sum_{n=0}^{N+2} \frac{d\hat{u}_n(t)}{dt} \int_0^\pi \cos(nx) \cos(mx) dx = \begin{cases}
-		\frac{d\hat{u}_m(t)}{dt} & \text{if } m\neq 0 \\
-		2\frac{d\hat{u}_0(t)}{dt} & \text{if } m=0
-	\end{cases}
-	\label{eq:ft3}
+	\frac{\hat{u}_m (t)}{dt} = \frac{1}{2} \left [ (m+1) \hat{u}_{m+1}(t) - (m-1)\hat{u}_{m-1}(t)\right]
+	\label{eq:sol3a}
+\end{equation}
+and for $m=0$
+\begin{equation}
+	\frac{\hat{u}_m (t)}{dt} = \frac{1}{4}\hat{u}_1(t)
+	\label{eq:sol3b}
+\end{equation}
+Applying the boundary conditions then results in
+\begin{enumerate}
+	\item $u_N(0,t) = \sum_{n=0}^{N+2} \hat{u}_n (t) \cos(0) =  \sum_{n=0}^{N+2} \hat{u}_n (t) = 0$
+	\item $u_N(\pi,t) = \sum_{n=0}^{N+2} \hat{u}_n (t) \cos(m\pi) =  \sum_{n=0}^{N+2} (-1)^n \hat{u}_n (t) = 0$
+\end{enumerate}
+which provide additional constraints and the initial conditions are for $m\in [0,N+2]$
+\begin{equation}
+	\hat{u}_m(0) = \frac{2}{\pi}\int_0^{\pi} g(x)\cos(mx)dx
+	\label{eq:init3}
 \end{equation}
