still trying to find optimal cfl

--- a/exam/report/main.tex
+++ b/exam/report/main.tex
@@ -32,7 +32,7 @@
 \urlstyle{same}
 
 
-\title{Exercise Sheet 3}
+\title{Take-Home Exam}
 \author{Dennys Huber}
 \date{\today}
  
@@ -67,9 +67,8 @@
 
 \maketitle
 
-\input{sections/ex01.tex}
-\input{sections/ex02.tex}
-\input{sections/ex03.tex}
-\input{sections/ex04.tex}
+\input{sections/part01.tex}
+\input{sections/part02.tex}
+\input{sections/part03.tex}
 
 \end{document}
